fix: quest service to finish a quest